# DynamoCLI

./: Cargo.toml  Makefile  readme.md
.github/workflows/: audit.yaml  general.yaml
scripts/app/: build.sh
scripts/db/: drop_db.sh  init_db.sh  table.json
src/: db.rs  error.rs  lib.rs  main.rs  models.rs  utils.rs
